# collaborative-zksnark

./: .gitignore
algebra/ff/: Cargo.toml
algebra/ff/src/fields/: mod.rs
algebra/poly/src/domain/: mixed_radix.rs
algebra/test-curves/src/bls12_381/: tests.rs
ark-serialize/: .cargo_vcs_info.json  Cargo.toml
ark-sponge/src/: lib.rs
ark-sponge/src/poseidon/: mod.rs
crypto-primitives/: Cargo.toml
curves/bn254/: Cargo.toml
curves/ed_on_bls12_377/: Cargo.toml
curves/ed_on_bls12_381/: Cargo.toml
curves/ed_on_bls12_381/src/constraints/: curves.rs
curves/ed_on_bn254/: Cargo.toml
curves/mnt6_298/: Cargo.toml
curves/pallas/: Cargo.toml
groth16/src/: verifier.rs
mpc-algebra/: test.zsh
mpc-algebra/src/: bin.rs  lib.rs  reveal.rs
mpc-algebra/src/share/: field.rs  mod.rs  spdz.rs
mpc-algebra/src/share/gsz20/: mod.rs
mpc-algebra/src/wire/: field.rs  group.rs  pairing.rs
mpc-snarks/: .gitignore  Cargo copy.toml  Cargo.toml  bench_test.zsh
mpc-snarks/scripts/: bench.zsh  local.zsh  mpc.zsh
mpc-snarks/src/: groth.rs  lib.rs  proof.rs
mpc-snarks/src/groth/: prover.rs
r1cs-std/src/bits/: boolean.rs
r1cs-std/src/fields/fp/: cmp.rs  mod.rs
r1cs-std/src/groups/curves/twisted_edwards/: mod.rs
snark/relations/src/r1cs/: constraint_system.rs
zen-arkworks/: Cargo.toml  collect_data.py  run.sh
zen-arkworks/examples/: lenet_large_face_poseidon.rs  lenet_medium_cifar_poly.rs  lenet_medium_cifar_poseidon.rs  lenet_medium_face_poly.rs  lenet_medium_face_poseidon.rs  lenet_small_cifar_poly.rs  lenet_small_cifar_poseidon.rs  lenet_small_face_poly.rs  lenet_small_face_poseidon.rs  shallownet_poseidon.rs
zen-arkworks/src/: argmax_circuit.rs  conv_circuit.rs  cosine_circuit.rs  fc_circuit.rs  full_circuit.rs  lenet_circuit.rs  lib.rs  pedersen.rs  poseidon_circuit.rs  psponge.rs  r1cs.rs  relu_circuit.rs  vanilla.rs
zen-arkworks_mpc/: Cargo.toml
zen-arkworks_mpc/examples/: lenet_large_face.rs  lenet_medium_cifar_poly.rs  lenet_medium_face.rs  lenet_medium_face_poly.rs  lenet_small_cifar_poly.rs  lenet_small_face_poly.rs  shallownet_poly.rs
zen-arkworks_mpc/src/: argmax_circuit.rs  avg_pool_circuit.rs  conv_circuit.rs  cosine_circuit.rs  fc_circuit.rs  full_circuit.rs  kzgcom_circuit.rs  lenet_circuit.rs  lib.rs  poly_circuit.rs  psponge.rs  relu_circuit.rs  util.rs  vanilla.rs
