[package]
name = "zen-arkworks"
version = "0.1.0"
authors = ["Lianke Qin"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = { version = "0.2.0", default-features = false }
rand_xorshift = { version = "0.2" }
#ark-std = { version = "^0.3.0", default-features = false }
#ark-ec = { version = "^0.3.0", default_features = false }

#ark-groth16 = { version = "0.3.0", default-features = false, features = [ "r1cs" , "parallel"] }
#ark-r1cs-std = { version = "0.3.0", default-features = false , features = [ "parallel"]}
#ark-relations = { version = "0.3.0", default-features = false }
#ark-ed-on-bls12-381 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
#ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
#ark-ed-on-bls12-377 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
#ark-bls12-377 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
#ark-ed-on-bn254 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
#ark-bn254 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
#ark-crypto-primitives = { version = "0.3.0", features = [ "r1cs" ] }
#ark-ff = { version = "0.3.0", default-features = false, features = [ "asm" ] }
#ark-poly = { version = "0.3.0", default-features = false }
#ark-poly-commit = { version = "0.3.0", default-features = false }
#ark-serialize = { version = "0.3.0", default-features = false, features = [ "derive" ] }
#ark-sponge={ version = "^0.3.0", default-features = true }


ark-ff = { path = "../algebra/ff", version = "0.2.0", default-features = false, features = [ "asm" ] }
ark-bls12-377 = { path = "../curves/bls12_377", version = "0.2.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.2.0", features = ["curve"] }
ark-bn254 = { path = "../curves/bn254", version = "0.2.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { path = "../curves/bw6_761", version = "0.2.0" }

ark-crypto-primitives = {path = "../crypto-primitives", version = "0.2.0", features = [ "r1cs" ] }

ark-ed-on-bls12-381 = { path = "../curves/ed_on_bls12_381", version = "0.2.0", default-features = false, features = ["r1cs"] }
ark-ed-on-bls12-377 = { path = "../curves/ed_on_bls12_377", version = "0.2.0", default-features = false, features = ["r1cs"] }
ark-ed-on-bn254 = { path = "../curves/ed_on_bn254", version = "0.2.0", default-features = false, features = ["r1cs"] }

ark-ec = { path = "../algebra/ec", version = "0.2.0", default-features = false }
ark-poly = { path = "../algebra/poly", version = "0.2.0", default-features = false }
ark-relations = { path = "../snark/relations", version = "0.2.0", default-features = false }
ark-serialize = { path = "../algebra/serialize", version = "0.2.0", default-features = false, features = [ "derive" ] }
ark-std = { path = "../utils", version = "0.2.0", default-features = false}
ark-groth16 = { path = "../groth16", version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-marlin = { path = "../marlin", version = "0.2.0", default-features = false, features = [ "std" ] }
ark-poly-commit = { path = "../poly-commit", version = "0.2.0", default-features = false, features = [ "std" ] }
ark-r1cs-std = { path = "../r1cs-std", version = "0.2.0", default-features = false }
ark-sponge = {  path = "../ark-sponge", default-features = true }

mpc-algebra = { path = "../mpc-algebra" }

num-traits = "0.2"
num = "0.3"
fast-math = "0.1"


bencher = "0.1.5"
criterion = "0.3.4"


blake2 = { version = "0.9", default-features = false }


